--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -374,7 +374,11 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 \phantomsection
 \addcontentsline{toc}{chapter}{Acknowledgments}
 \setlength{\parindent}{20pt}
-% To my parents, Osvaldo Concha and Nelly Sepulveda, sister Loretto Concha and brother Alvaro Concha. USGS. Monroe County Environment: Scott, Providencia and Gary. Nina and Rolo. Dr. Christy Taylor. Paul. Aaron Gerace. Alan Wiedmman. Ocean Color community: Emmanuel Boss and attendants of the 2013 Ocean color and instrumentation summer course at the Darling Marine Center. Fulbright commission. My advisor Dr. John Schott. Amanda and Cindy. Classmates: Aly, Bikash, Viraj, Madurima, Peter Sun. Professor Dr. John Kerekes. Collection help: Harold Valdivia. My dear friends: Juan Saldana, Kader, Patrick, Sarada, Susan, Melisa, Sasha, Jeremy. The people at Crossfit Rochester: Joe, Andrew. The Latin Rhythm Dance Club at RIT. My best support here Aixa de Jesus. My adopted Chilean family and dancers in Rochester: Marcia, Rosa and Doña Rosita, Raul, Willy and Marisol, Harold and Nancy. My Chilean friends in U. of R. Felipe, Maria Eugenia, Emilio, Brenda and Pauly. Kimberley Thoms.
+I would like to extend a special thanks to the United States Geological Survey (USGS) for its sponsorship (contract number G12PC00065) and for the free-access Landsat archive that has made this effort possible. Thanks to the Fulbright Commission for opening me the doors and sponsoring my M.S. degree. Special thanks to the Monroe County Environmental Laboratory of the Monroe County Department of Environmental Services for the $C_a$ and $TSS$ measurements used to validate our in house concentration measurements, especially Scott, Providencia and Gary. Nina Raque\~{n}o is thanked for her invaluable help in the logistic of the field data collections, and faculty, staff and students at the Rochester Institute of Technology for helping in the data collection, especially Paul Romanczyk and Rolando Raque\~{n}o. Also, thanks to Dr. Christy Tyler for facilitating the Aquatic Ecology Lab at RIT for the $C_a$ measurements. Also, thanks to the people who help me in one way or other in the data collections. Also, thanks to Ocean Color community, specially Dr. Emmanuel Boss and attendants of the 2013 Ocean color and instrumentation summer course at the Darling Marine Center for including me in their family. To my advisor Dr. John Schott for believing on me, guiding me and allowing me independence. Thanks to the administrative staff at the center, specially Cindy Schultz, Sue Chan and Amanda Zeluff for always helping me with a smile.
+
+It is not easy to be far away from my beloved ones. I cannot describe the pride I feel of having what a supporting family that overcomes the sadness of not being together with happiness of me achieving my goals. Thanks to my parents Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes for sacrificing their life for ours and always giving the best for our education. I would not be here if were not for them. Thanks to my siblings Loretto Constanza Concha Sep\'ulveda and Alvaro Nicolas Concha Sep\'ulveda for always supporting me.
+
+Being at RIT and in Rochester, NY was a great experience. Many are the ones to thanks for making my time here enjoyable. My friends Aly, Anton, Claudia, Dmitry and my girlfriend Yana. To my classmates: Bikash, Viraj, Madurima, Peter Sun, Dave Kelbe. To he Latin Rhythm Dance Club at RIT. Especially thanks to my best support here in the U.S.: my dear friend Aixa de Jesus. My adopted Chilean family and dancers in Rochester: Marcia, Rosa and Doña Rosita, Raul, Willy and Marisol, Harold and Nancy. My Chilean friends in University of Rochester: Felipe, Maria Eugenia, Emilio, Brenda and Pauly. And finally to all the Rochester's dance community that helped me not to get insane on all these five years.
 \end{acknowledgements}
 %*****************************************************************************************************
 
